--- a/cloud-provider-payment8001/src/main/resources/application.yml
+++ b/cloud-provider-payment8001/src/main/resources/application.yml
@@ -13,7 +13,7 @@ spring:
     password: 123456
 
 mybatis:
-  type-aliases-package: com.xn2001.com.xn2001.springcloud.entities       #所有Entity别名类所在包
+  type-aliases-package: com.xn2001.springcloud.entities       #所有Entity别名类所在包
   mapper-locations: classpath:mapper/*.xml
 
 eureka:
@@ -23,4 +23,7 @@ eureka:
     #是否从EurekaServer抓取已有的注册信息，默认为true。单节点无所谓，集群必须设置为true才能配合ribbon使用负载均衡
     fetch-registry: true
     service-url:
-      defaultZone: http://localhost:7001/eureka
+      #defaultZone: http://localhost:7001/eureka
+
+      #集群版
+      defaultZone: http://eureka7001.com:7001/eureka,http://eureka7002.com:7002/eureka
