--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
         <module>cloud-eureka-server7001</module>
         <module>cloud-eureka-server7002</module>
         <module>cloud-provider-payment8002</module>
+        <module>cloud-providerconsul-payment8006</module>
+        <module>cloud-consumerConsul-order80</module>
     </modules>
 
     <!--统一管理jar包版本-->
