--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <module>cloud-provider-payment8002</module>
         <module>cloud-providerConsul-payment8006</module>
         <module>cloud-consumerConsul-order80</module>
+        <module>cloud-consumer-feign-order80</module>
     </modules>
 
     <!--统一管理jar包版本-->
