--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,8 @@
         <module>cloud-providerConsul-payment8006</module>
         <module>cloud-consumerConsul-order80</module>
         <module>cloud-consumer-feign-order80</module>
+        <module>cloud-provider-hystrix-payment8001</module>
+        <module>cloud-consumer-feign-hystrix-order80</module>
     </modules>
 
     <!--统一管理jar包版本-->
