--- a/cloud-consumer-feign-hystrix-order80/src/main/resources/application.yml
+++ b/cloud-consumer-feign-hystrix-order80/src/main/resources/application.yml
@@ -5,3 +5,6 @@ eureka:
     fetch-registry: true
     service-url:
       defaultZone: http://eureka7001.com:7001/eureka
+feign:
+  hystrix:
+    enabled: true
