--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,3 @@
-# Project exclude paths
-.idea/*.xml
-.idea/.gitignore
-.idea/compiler.xml
-.idea/encodings.xml
-.idea/inspectionProfiles/
-.idea/jarRepositories.xml
-.idea/libraries/
-.idea/misc.xml
-.idea/modules.xml
-.idea/mycloud.iml
-.idea/vcs.xml
+.idea
+**/target
+**/*.iml
